# ela

./: .clang-format  .clock_diff.txt  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.txt  a.out  all-libs  all-libs.c  any-cast.idea.c  ast.cpp  ast.hpp  ast.toml  builtin.c  cf.ela  changelog.txt  control-flow  control-flow.c  core.hpp  drop-plan.md  dummy.ela  ela.code-workspace  ela.sln  ela.vcxproj  ela.vcxproj.filters  emit.cpp  error.hpp  feature-plan.md  install.bat  install.py  install.sh  keywords.md  lex.cpp  lex.hpp  loc.py  loc.sh  log.txt  logs.txt  (+28 more)
docs/: ABI-stuff.md  directives.md  flags.md
docs/learning/: .gitignore  0.ela  1.ela  2.ela  3.ela  array.ela  basic-rundown.ela  constructing.ela  control_flow.ela  enum.ela  functions.ela  generic_function.ela  import.ela  initializing.ela  interface.ela  main.ela  methods.ela  module.ela  mutability.ela  numbers.ela  pointers.ela  reflection.ela  statics.ela  string.ela  struct.ela  tuple.ela  union.ela
docs/learning/basic/: hello-world.ela  primitives.ela
ela_source/: .gitignore  boilerplate.hpp  dummy.ela  include.ela  main.ela  range.ela  string.ela  syntax-new.ela  test-test.json  test.ela  tsm.ela
examples/: llvm-test.ela  take_tour.sh  test.ela
examples/dynamic_library/: compile-so.sh  main-main.json  main.ela  run.sh  shared.ela  test.ela
examples/freestanding/: .gitignore  ert.s  info.txt  lib.ela  main  main.c  main.ela  print.s  run.sh
examples/game/: game  game.cpp  game.ela  game.hpp
examples/gl/: gl_test  gl_test.ela  shader.frag  shader.vert
examples/res/: shader.frag  shader.vert
examples/sequencer/: info.txt  main-main.json  main.ela  run.sh
examples/target_practice/: .gitignore  info.txt  main-main.json  main.ela  run.sh  ui.ela
examples/tcp/: client.ela  info.txt  server.ela  util.ela
feature/: compiler-implemented-to_string.ela  control-flow-expressions.ela  coroutines.ela  easy-misc.ela  generic-alias.ela  include-c.ela  interface.ela  modules.ela  mutability.ela  named-init-list.ela  quick-lambda.ela  readme.md  str-interp.ela  tagged-unions.ela
feature/builtin/: array  array.ela  interface.ela  interfaces.ela  string.ela
include/: arena.hpp  ast.hpp  ast_copier.hpp  ast_resolver.hpp  binding.hpp  boilerplate.hpp  builder.hpp  bytecode.hpp  callconv.hpp  constexpr.hpp  copier.hpp  core.hpp  emit.hpp  error.hpp  interned_string.hpp  interpreter.hpp  lex.hpp  libffi.hpp  llvm.hpp  llvm_emit.hpp  mir.hpp  resolver.hpp  scope.hpp  string_builder.hpp  strings.hpp  symbol_pass.hpp  tac.hpp  thir.hpp  thir_emit.hpp  thir_emitter.hpp  thir_interpreter.hpp  thir_resolver.hpp  type.hpp  typer.hpp  value.hpp  visitor.hpp  vm.hpp
lib/: _raybindings.ela  array.ela  assert.ela  bootstrap.ela  builder.ela  core.ela  directory.ela  dlfcn.ela  file.ela  format.ela  gl.ela  hashmap.ela  install.sh  interned.ela  interned_string.ela  json.ela  map.ela  math.ela  memory.ela  net.ela  pthread.ela  raylib.ela  rayui.ela  reflection.ela  string.ela  string_builder.ela  time.ela  utf8.ela
lib/bootstrap/: String.ela  hash.ela  interfaces.ela  lib.ela  libc.ela  list.ela  memory.ela  numeric.ela  range.ela  reflection.ela  slice.ela  str.ela  string.ela  tests.ela  typedef.ela
lib/json/: lexer.ela
lib/raylib/: _raybindings.ela  lib.ela
lsp/: .gitignore  CMakeLists.txt  main  main.ela
lsp/ela-lsp/: CHANGELOG.md  README.md  ela-lsp-0.0.1.vsix  package-lock.json  package.json
lsp/ela-lsp/src/: ela.ts  extension.ts
lsp/src/: main.cpp
repro/: .gitignore  1.ela  10.ela  100.ela  102.ela  103.ela  104.ela  105.ela  107.ela  108.ela  109.ela  11.ela  110.ela  111.ela  112.ela  113.ela  114.ela  115.ela  116.ela  117.ela  119.ela  12.ela  120.ela  121.ela  122.ela  123.ela  124.ela  127.ela  128.ela  129.ela  13.ela  130.ela  131.ela  132.ela  133.ela  14.ela  15.ela  16.ela  17.ela  18.ela  (+108 more)
repro/fixed/: 100.ela  101.ela  104.ela  105.ela  106.ela  107.ela  110.ela  113.ela  114.ela  116.ela  118.ela  119.ela  123.ela  126.ela  26.ela  27.ela  33.ela  52.ela  70.ela  72.ela  76.ela  77.ela  80.ela  81.ela  84.ela  87.ela  88.ela  89.ela  90.ela  91.ela  92.ela  93.ela  94.ela  96.ela
source/: .gitignore  boilerplate.hpp  dummy  dummy.cpp  dummy.ela  dummy.hpp  run_test.sh  test.cpp  test.ela  test.hpp
src/: ast.cpp  ast_copier.cpp  ast_resolver.cpp  binding.cpp  command.cpp  constexpr.cpp  copier.cpp  dependency.cpp  dependency_emitter.cpp  ela.code-workspace  emit.cpp  emit2.cpp  globals.cpp  interp.cpp  interpreter.cpp  lex.cpp  libffi.cpp  llvm.cpp  llvm_emit.cpp  main.cpp  mir-print.cpp  mir.cpp  old_emit.cpp  old_resolver.cpp  old_typer.cpp  old_typer.cpp.z  parser.cpp  print.cpp  resolver.cpp  scope.cpp  symbol_pass.cpp  thir.cpp  thir_command.cpp  thir_emit.cpp  thir_interpreter.cpp  thir_resolver.cpp  type.cpp  type_visitor.cpp  typer.cpp  typer2.cpp  (+3 more)
src/abi/: sysv_64.cpp  win64.cpp
tests/: .gitignore  alias.ela  all-libs.c  all-libs.ela  builtin.ela  choice.ela  conditional-compilation.ela  control-flow.ela  defaults.ela  defer  defer.cpp  defer.ela  destructor.ela  dyn.ela  enum.ela  env.ela  expr-body.ela  expr.ela  fn_ptr.ela  functions.ela  generic_types.ela  generics.ela  init_list.ela  interface.ela  json-test.ela  lambda.ela  method.ela  operator-overload.ela  reflection-test.ela  struct.ela  test.json  trait.ela  tuple.ela  union.ela  using.ela  where.ela
todo/: state-stack-opt.ela
tools/: .gitignore  bindings-generator.cpp  build.sh  raylib.ela  raylib.h.inc
vscode-extension/: CHANGELOG.md  README.md  ela-0.0.1.vsix  jai-0.0.1.vsix  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode-extension/syntaxes/: ela.tmLanguage  ela.tmLanguage.json  jai.tmLanguage
